--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,9 +9,20 @@
 		</ul>
 	<% end %>
 
-	<% if current_user %>
-		Welcome, <%= current_user.email %>
-	<% end %>
+  <% if flash[:notice] %>
+    <div id="notice">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+
+  <% if current_user %>
+    Welcome, <%= current_user.email %>
+    <form method="post" action="/sessions">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" value="Sign out">
+    </form>
+  <% end %>
+
 	<%= yield %>
 
 </body>
