--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,7 @@
+<a href="/links/new">Add New Link</a>
+
 <ul>
 	<% @links.each do |link| link %>
 		<li><a href="<%= link.url %>"><%= link.title %></a></li>
 	<% end %>
 </ul>
-
-<div id="new-link">
-	<form action="/links" method="post">
-		Url: <input type="text" name="url">
-		Title: <input type="text" name="title">
-		Tags: <input type="text" name="tags">
-		<input type="submit" value="Add link">
-	</form>
-</div>
