changed color theme

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -5,11 +5,13 @@ body {
 
 header {
 	width: 100%;
-	height: 50px;
-	background-color: black;
+	height: 60px;
+	background-color: #ff606e;
 	color: white;
 	display: flex;
 	padding: 10px 30px;
+	text-decoration: none;
+	margin-bottom: 40px;
 }
 
 header > * {
@@ -17,10 +19,11 @@ header > * {
 }
 
 header #logo {
-	margin: auto 0;
+	margin-right: 50px;
 	display: flex;
 	font-size: 40px;
 	font-family: "HelveticaNeue-Light";
+	color: #253939;
 }
 
 header #user-links {
@@ -29,12 +32,19 @@ header #user-links {
 	text-align: right;
 }
 
+header a {
+	color: white;
+	text-decoration: none;
+}
+
 a.button {
 	display: inline-block;
 	width: 80px;
 	height: 25px;
-	background-color: orange;
-	border: 2px solid white;
+	background-color: #517398;
+	border-width: 1px;
+	border-style: solid;
+	border-color: white;
 	color: white;
 	text-decoration: none;
 	padding: 0px 10px;
@@ -43,5 +53,9 @@ a.button {
 	margin-left: 5px;
 	margin-right: 5px;
 	text-shadow: 0 0 2px rgba(0,0,0, 0.4);
+}
+
+a.button.highlighted {
+  background-color: #262c3a;
 }
 
