--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,6 +24,9 @@
 
 	  <header>
 	  	<div id="logo">Bookmark Manager</div>
+	  	
+	  	<a href="/links/new" class="button highlighted">Add link</a>
+
 	  	<div id="user-links">
 
 			  <% if current_user %>
